Java 9 compatibility, disable GC logging for now #872